--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,13 @@
 <!--			jan'21-->
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.univocity/univocity-parsers -->
+		<dependency>
+			<groupId>com.univocity</groupId>
+			<artifactId>univocity-parsers</artifactId>
+			<version>2.9.1</version>
+		</dependency>
+
 		<!--some contribs:-->
 		<dependency>
 			<groupId>org.matsim.contrib</groupId>
