--- a/pom.xml
+++ b/pom.xml
@@ -158,8 +158,14 @@
 			<artifactId>application</artifactId>
 			<version>${matsim.version}</version>
 		</dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
 
-		<!--Dependencies from where stated above to here are added as a service; they can be removed if you don't need them-->
+        <!--Dependencies from where stated above to here are added as a service; they can be removed if you don't need them-->
 
 	</dependencies>
 
