--- a/pom.xml
+++ b/pom.xml
@@ -235,7 +235,8 @@
 				<configuration>
 					<source>17</source>
 					<target>17</target>
-				</configuration>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
 			</plugin>
 		</plugins>
 	</build>
