--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 # Package Files #
 *.war
 *.ear
+*.jar
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
@@ -14,6 +15,9 @@ hs_err_pid*
 /.classpath
 /output/
 /bin/
+/scenarios/utah/wfrc_all_plans.csv
+/scenarios/utah/wfrc_all_plans.xml
+
 
 
 *.iml
