--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,7 @@ hs_err_pid*
 /output/
 /examples/
 /bin/
-/scenarios/utah/wfrc_all_plans.csv
-/scenarios/utah/wfrc_all_plans.xml
+/scenarios/utah/networks/
 
 
 
