--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,8 @@ hs_err_pid*
 /target/
 /test/output/
 /bin/
-/scenarios/utah/networks/
-/scenarios/utah/plans/
+/utah/networks/
+/utah/plans/
 
 
 *.iml
