--- a/pom.xml
+++ b/pom.xml
@@ -130,7 +130,7 @@
 		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
-			<version>RELEASE</version>
+			<version>7.7.0</version>
 			<scope>compile</scope>
 		</dependency>
 
@@ -179,12 +179,12 @@
 							<goal>shade</goal>
 						</goals>
 						<configuration>
-							<outputFile>Test.jar</outputFile>
+							<outputFile>SamplePop.jar</outputFile>
 							<transformers>
 								<!-- The following sets the main class for the executable jar as you otherwise would with the assembly plugin -->
 								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 									<manifestEntries>
-										<Main-Class>run.RunIMT</Main-Class>
+										<Main-Class>population.SamplePopulation</Main-Class>
 										<Specification-Vendor>org.matsim</Specification-Vendor>
 										<Implementation-Vendor>org.matsim</Implementation-Vendor>
 										<Implementation-Version>${project.version}</Implementation-Version>
