--- a/pom.xml
+++ b/pom.xml
@@ -179,12 +179,12 @@
 							<goal>shade</goal>
 						</goals>
 						<configuration>
-							<outputFile>SamplePop.jar</outputFile>
+							<outputFile>Baseline_10_to_60.jar</outputFile>
 							<transformers>
 								<!-- The following sets the main class for the executable jar as you otherwise would with the assembly plugin -->
 								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 									<manifestEntries>
-										<Main-Class>population.SamplePopulation</Main-Class>
+										<Main-Class>run.RunIMT</Main-Class>
 										<Specification-Vendor>org.matsim</Specification-Vendor>
 										<Implementation-Vendor>org.matsim</Implementation-Vendor>
 										<Implementation-Version>${project.version}</Implementation-Version>
