--- a/pom.xml
+++ b/pom.xml
@@ -179,7 +179,7 @@
 							<goal>shade</goal>
 						</goals>
 						<configuration>
-							<outputFile>Baseline_10_to_60.jar</outputFile>
+							<outputFile>Baseline.jar</outputFile>
 							<transformers>
 								<!-- The following sets the main class for the executable jar as you otherwise would with the assembly plugin -->
 								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
