--- a/pom.xml
+++ b/pom.xml
@@ -208,12 +208,12 @@
 							<goal>shade</goal>
 						</goals>
 						<configuration>
-							<outputFile>jar/Truck_Events.jar</outputFile>
+							<outputFile>jar/Volume.jar</outputFile>
 							<transformers>
 								<!-- The following sets the main class for the executable jar as you otherwise would with the assembly plugin -->
 								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 									<manifestEntries>
-										<Main-Class>analysis.run.RunTruckEventHandler</Main-Class>
+										<Main-Class>analysis.run.RunVolumeEventHandler</Main-Class>
 										<Specification-Vendor>org.matsim</Specification-Vendor>
 										<Implementation-Vendor>org.matsim</Implementation-Vendor>
 										<Implementation-Version>${project.version}</Implementation-Version>
